--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,9 +13,9 @@ security:
                 class: App\Entity\User
                 property: username
     role_hierarchy:
-        ROLE_SUPERUSER: [ROLE_ADMINISTRATOR , ROLE_EDITORIAL]
+        ROLE_SUPERUSER: [ROLE_ADMINISTRATOR , ROLE_EMPLOYEE]
         ROLE_ADMINISTRATOR: [ROLE_ADMIN, ROLE_MANAGER,ROLE_ALLOWED_TO_SWITCH,ROLE_PREMIUM_USER,ROLE_FREE_USER]
-        ROLE_EDITORIAL: [ROLE_ADMIN,ROLE_WRITER,ROLE_PUBLISHER,ROLE_PREMIUM_USER,ROLE_FREE_USER]
+        ROLE_EMPLOYEE: [ROLE_ADMIN,ROLE_WRITER,ROLE_PUBLISHER,ROLE_PREMIUM_USER,ROLE_FREE_USER]
         ROLE_WRITER: [ROLE_ADMIN]
         ROLE_USER: [ROLE_FREE_USER]
     firewalls:
