--- a/config/services.yaml
+++ b/config/services.yaml
@@ -32,3 +32,7 @@ services:
 
     App\EventSubscriber\RedirectToLocaleSubscriber:
         arguments: ['@router', '%app_locales%', '%locale%']
+
+    App\Twig\FloatExtension:
+        tags:
+            - { name : twig.extension }
