--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "datatables.net": "^2.0.5",
-    "datatables.net-bs5": "^2.0.5"
+    "datatables.net-bs5": "^2.0.5",
+    "datatables.net-responsive-dt": "^3.0.2",
+    "datatables.net-rowreorder-dt": "^1.5.0"
   }
 }
