--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "knplabs/knp-paginator-bundle": "^5.9",
         "league/csv": "^9.15",
         "liip/imagine-bundle": "^2.3",
+        "mobizel/symfony-capistrano": "^0.4.0",
         "stof/doctrine-extensions-bundle": "^1.4",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.2.*",
@@ -97,7 +98,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": true,
+            "allow-contrib": "true",
             "require": "6.2.*"
         }
     }
