--- a/package.json
+++ b/package.json
@@ -5,5 +5,15 @@
     "datatables.net-bs5": "^2.0.5",
     "datatables.net-responsive-dt": "^3.0.2",
     "datatables.net-rowreorder-dt": "^1.5.0"
+  },
+  "scripts": {
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
+    "production": "mix --production"
+  },
+  "devDependencies": {
+    "laravel-mix": "^6.0.49"
   }
 }
