--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,6 +7,10 @@ controllers:
     defaults:
         _locale: '%locale%'
 
+app_locale_root:
+    path : /
+    controller : App\Controller\AdminController::index
+
 app_client_importcsv:
     path : /{_locale}/client/test
     controller : App\Controller\ClientController::importCsv
